<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CalCulator</string>
    <string name="calc_backspace">backspace</string>
    <string name="calc_clear">AC</string>
    <string name="calc_modulo">%</string>
    <string name="calc_divide">/</string>
    <string name="calc_multiply">x</string>
    <string name="calc_plus">+</string>
    <string name="calc_minus">-</string>
    <string name="calc_equals">=</string>
    <string name="calc_decimal">.</string>
    <string name="calc_sign_toggle">±</string>
    <string name="digit_zero">0</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>
</resources>